# tool_ip2email

./: .gitignore  Makefile  README.md  SendIPToEmail.py  _config.yml  ipToEmail.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  jekyll-gh-pages.yml  pre-commit.yml  release-package.yml
docs/adr/: ADR_0_use-shell-commands-to-identify-ip-address.md  ADR_1_use-gmail-to-send-email-address.md  ADR_2_use-pyinstaller-to-create-a-single-file-application.md  ADR_3_use-git-tags-to-dynamically-version-the-project.md
ip2email/: email.py  emailHandler.py  ip.py  main.py
ip2email/libs/: emailComposer.py  test_logger.py
libs/: cmdLineInterface.py  cmdLineParser.py  emailComposer.py  logger.py  test_cmdLineInterface.py  test_ipAddress.py
src/: ip.py  ipToEmail.py  main.py
src/libs/: cmdLineInterface.py  cmdLineParser.py  emailComposer.py  logger.py  test_emailComposer.py
