[tool.poetry]
name = "ip2email"
version = "0.0.2"
description = "A small utility to email a device's local IP address"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["utility", "email", "unix"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.1.7"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ip2email = "ip2email.main:main"
