[tool.poetry]
name = "ip2email"
version = "0.0.0"
description = "A small utility to email a device's local IP address"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["utility", "email", "unix"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.1.7"
pyinstaller = "^6.11.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = false
pattern = "(?P<base>\\d.\\d.\\d+)"
format = "v{base}"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
ip2email = "ip2email.main:main"
